# ModShot-Nova

./: .gitignore  README.md  meson.build  meson_options.txt
binding-mri/: binding-mri.cpp  binding-util.cpp  binding-util.h  meson.build
binding-mri/fmod-binding/: audio-binding.cpp  common_structs.h  fmod-core-binding.cpp  fmod-studio-binding.cpp  fmod_bindings.h  fmod_enums.cpp  fmod_enums.rb  fmod_enums.rb.xxd  fmod_structs.cpp
binding-mri/fmod-binding/core/: common_structs.cpp  fmod-core-binding.cpp  system.cpp
binding-mri/fmod-binding/studio/: bank.cpp  bus.cpp  commandreplay.cpp  common_structs.cpp  eventdescription.cpp  eventinstance.cpp  fmod-studio-binding.cpp  system.cpp  vca.cpp
scripts/: meson.build
scripts/rgss/: Main.rb
src/: main.cpp  meson.build
src/filesystem/source/: filesystem.cpp
src/fmod/headers/: audio.h
src/fmod/source/: audio.cpp
src/thread/headers/: eventthread.h  sharedstate.h
src/thread/source/: eventthread.cpp  sharedstate.cpp
src/util/headers/: config.h
src/util/source/: config.cpp
windows/: Makefile  install.sh  manifest.xml
